--- a/FarmerFriend_Team05/src/main/resources/application.properties
+++ b/FarmerFriend_Team05/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/Team05_Project?createDatabaseIfNotExist=true
+spring.datasource.url= jdbc:mysql://localhost:3306/FarmerFriend_Team05?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 
